--- a/VK_spam.ipynb
+++ b/VK_spam.ipynb
@@ -2146,6 +2146,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DMYQIKbrzIGY"
+      },
+      "outputs": [],
+      "source": [
+        "for model in models:\n",
+        "    roc_auc, precision = train_model(model, X_train, X_test, y_train, y_test)\n",
+        "    print()\n",
+        "    print(\"For: \", model)\n",
+        "    print(\"ROC-AUC: \", roc_auc)\n",
+        "    print(\"Precision: \", precision)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "y_pred = mnb.predict(X_test)\n",
         "roc_auc = roc_auc_score(y_test, y_pred)\n",
@@ -2170,28 +2186,6 @@
           "metadata": {},
           "execution_count": 27
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "DMYQIKbrzIGY"
-      },
-      "outputs": [],
-      "source": [
-        "roc_auc_scores = []\n",
-        "precision_scores = []\n",
-        "\n",
-        "for model in models:\n",
-        "    roc_auc, precision = train_model(model, X_train, X_test, y_train, y_test)\n",
-        "    print()\n",
-        "    print(\"For: \", model)\n",
-        "    print(\"ROC-AUC: \", roc_auc)\n",
-        "    print(\"Precision: \", precision)\n",
-        "\n",
-        "    roc_auc_scores.append(roc_auc)\n",
-        "    precision_scores.append(precision)"
       ]
     },
     {
@@ -2608,7 +2602,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5IBaIKVP7/QfRTHFMLNCD",
+      "authorship_tag": "ABX9TyPPrlvstKrcPDlRpksvlUK1",
       "include_colab_link": true
     },
     "kernelspec": {
